/*
 * Tinkers Construct
 * Master build file
 * 
 * Authors: boni, Sunstrike, ProgWML6
 * Help from AbrarSyed
 */

plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.142'
    id 'io.freefair.lombok' version '8.11'
}
//apply plugin: 'maven'

//import net.minecraftforge.gradle.common.task.SignJar
repositories {
    mavenCentral()
    mavenLocal()
    maven { // Mantle
        name = 'DVS1 Maven FS'
        url = uri('https://dvs1.progwml6.com/files/maven')
        content {
            excludeGroupByRegex 'dev\\.shadowsoffire.*'
        }
    }
    maven { // TOP
        name = 'tterrag maven'
        url = uri('https://maven.tterrag.com/')
    }
    maven { // CraftTweaker, Immersive Engineering, JEI
        name = 'BlameJared Maven'
        url = uri('https://maven.blamejared.com')
    }
    maven { // JSON Things
        name = 'Dogforce Games'
        url = uri('https://www.dogforce-games.com/maven/')
    }
    maven { // Apotheosis and Placebo
        name = 'Shadowsoffire Maven'
        url = uri('https://maven.shadowsoffire.dev/releases')
    }
    maven {
        url = uri('https://www.cursemaven.com')
        content {
            includeGroup "curse.maven"
        }
    }
    // If you have mod jar dependencies in ./libs, you can declare them as a repository like so:
     flatDir {
         dirs = ['../Mantle/build/libs']
     }
}

group = 'slimeknights.tconstruct'
base {
    archivesName = 'TinkersConstruct'
}                                                          
java.toolchain.languageVersion = JavaLanguageVersion.of(25)

// sets version to the slimeKnights version format
task buildInfo {
    try {
        def cmd = "git rev-parse --short HEAD"
        def proc = cmd.execute()
        proc.waitFor()
        if (proc.exitValue() == 0) {
            ext.revision = proc.text.trim()
        } else {
            ext.revision = "GITBORK"
        }
    } catch (all) {
        ext.revision = "gitgud"
    }

    if (System.getenv().BUILD_NUMBER != null) {
        ext.buildNum = "${System.getenv().BUILD_NUMBER}"
    } else {
        ext.buildNum = "DEV.${project.buildInfo.revision}"
    }
}
ext.artifact_version = 'NFG'
if (System.getenv().ARTIFACT_VERSION == null) {
    artifact_version = "${mod_version}.${project.buildInfo.buildNum}"
}
if (System.getenv().ARTIFACT_VERSION != null) {
    artifact_version = "${system.getenv().ARTIFACT_VERSION}"
}

version = "${minecraft_version}-${artifact_version}"
println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}, Version: ${version}"

sourceSets {
    main {
        resources {
            srcDirs = ["src/main/resources", "src/generated/resources", "src/generated/client"]
            //But exclude the cache of the generated data from what gets built
            exclude '.cache'
            // exclude debug resources, they are for helping us make the mod, not for the actual mod
            exclude 'assets/tconstruct/debug'
        }
    }
}

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

apply from: 'fix_models.gradle'

neoForge {
    version = project.neoforge_version

    // enableIdeaPrepareRuns = true

    accessTransformers {
        file('src/main/resources/META-INF/accesstransformer.cfg')
    }

    runs {
        // applies to all the run configs below
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP,CORE'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            systemProperty 'forge.logging.console.level', 'debug'
            jvmArgument '-Xmx6G'
            
            // IE uses mixins, remap their mixins to work in dev
            systemProperty 'mixin.env.remapRefMap', 'true'
            systemProperty 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
        }
    
        client {
            client()
            //The below if statements are to add args to your gradle.properties file in user home
            // (DO NOT add them directly to the gradle.properties file for this project)
            // Setting the below properties allows use of your normal Minecraft account in the
            // dev environment including having your skin load. Each property also has a comment
            // explaining what information to set the value to/format it expects
            // One thing to note is because of the caching that goes on, after changing these
            // variables, you need to refresh the project and rerun genIntellijRuns/genEclipseRuns
            if (project.hasProperty('mc_uuid')) {
                //Your uuid without any dashes in the middle
                programArguments.addAll '--uuid', project.getProperty('mc_uuid')
            }
            if (project.hasProperty('mc_username')) {
                //Your username/display name, this is the name that shows up in chat
                // Note: This is not your email, even if you have a Mojang account
                programArguments.addAll '--username', project.getProperty('mc_username')
            }
            if (project.hasProperty('mc_accessToken')) {
                //Your access token, you can find it in your '.minecraft/launcher_profiles.json' file
                programArguments.addAll '--accessToken', project.getProperty('mc_accessToken')
            }
        }

        server {
            server()
            programArgument '--nogui'
        }

        data {
            serverData()
            programArguments.addAll '--mod', 'tconstruct', '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath(), '--existing', file('../Mantle/src/main/resources/').getAbsolutePath(), '--existing', file('../Mantle/src/generated/resources/').getAbsolutePath()
        }
        clientData {
            clientData()
            programArguments.addAll '--mod', 'tconstruct', '--all', '--output', file('src/generated/client/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath(), '--existing', file('../Mantle/src/main/resources/').getAbsolutePath(), '--existing', file('../Mantle/src/generated/resources/').getAbsolutePath()
        }
    }

    mods {
        tconstruct {
            sourceSet project.sourceSets.main
        }
    }
}

configurations {
    deployerJars
}

lombok {
    version = '1.18.46'
}

dependencies {
    // would ideally use API for this, but that does not work well with fg.deobf in my understanding
    implementation files("../Mantle/build/libs/Mantle-${minecraft_version}-${mantle_version}-patched.jar")

    

    // compile against the JEI API but do not include it at runtime
    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    // at runtime, use the full JEI jar
    runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    // implementation "mcjty.theoneprobe:TheOneProbe-${minecraft_base_version}:${minecraft_base_version}-${probe_version}"

    // compileOnly "blusunrize.immersiveengineering:ImmersiveEngineering:${minecraft_version}-${ie_version}"
    // runtimeOnly "curse.maven:MoonlightLib-499980:6000197"
    // implementation "curse.maven:MmmMmmMmmMmm-225738:5737040"
    // 
    // compileOnly "curse.maven:diet-443570:4813904"
    // 
    // compileOnly "dev.gigaherz.jsonthings:JsonThings-${minecraft_version}:${json_things_version}"

    // compileOnly "curse.maven:balm-531761:5999476"
    // Optional Crafting Tweaks integration, matching the current NeoForge 26.1.2 release.
    compileOnly "curse.maven:crafting-tweaks-233071:8362296"
    compileOnly "curse.maven:json-things-541617:7922513"
    // Optional Apotheosis bridge: compile against the API, never bundle it into TCon.
    compileOnly "dev.shadowsoffire:Placebo:${minecraft_version}-${placebo_version}"
    compileOnly "dev.shadowsoffire:Apotheosis:${minecraft_version}-${apotheosis_version}"

    deployerJars 'org.apache.maven.wagon:wagon-ssh:2.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.mockito:mockito-inline:4.2.0'
    testImplementation 'org.assertj:assertj-core:3.21.0'
}

test {
    useJUnitPlatform()
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
        'version': artifact_version,
        'loader_range': loader_range,
        'minecraft_range': minecraft_range,
        'neoforge_version': neoforge_version,
        'mantle_range': mantle_range,
        'jei_range': jei_range,
        'json_things_range': json_things_range,
        'apotheosis_range': apotheosis_range

    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                "Specification-Title"     : "Tinkers Construct",
                "Specification-Vendor"    : "Slime Knights",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : "${version}",
                "Implementation-Vendor"   : "Slime Knights",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

java {
    withSourcesJar()
}

sourcesJar {
    exclude 'assets/**'
    exclude 'data/**'
    exclude 'pack.png'
    exclude 'pack.mcmeta'
    exclude 'META-INF/neoforge.mods.toml'
}

// verify the properties exist.. or initialize.
if (!project.hasProperty("keystore_location")) // keystore location
    ext.keystore_location = "."

if (!project.hasProperty("keystore_user_alias")) // keystore user alias
    ext.keystore_user_alias = ""
if (!project.hasProperty("sftp_username"))
    ext.sftp_username = ""
if (!project.hasProperty("sftp_key"))
    ext.sftp_key = ""
if (!project.hasProperty("keystore_user_password")) // keystore user pass
    ext.keystore_user_password = ""
if (System.getenv().KSK_PW != null)
    ext.keystore_user_password = System.getenv().KSK_PW


task("uploadJars", dependsOn: "build") {

    description = "uploads JARs"

    if (project.hasProperty("local_maven") || project.hasProperty("sftp_maven")) {
        apply plugin: 'maven'
        uploadArchives {
            repositories {
                if (project.hasProperty("local_maven")) {
                    mavenDeployer {
                        repository(url: "file://${local_maven}")
                    }
                }
                if (project.hasProperty("sftp_maven")) {
                    repositories.mavenDeployer {
                        configuration = configurations.deployerJars
                        repository(url: "sftp://${sftp_maven}") {
                            authentication(userName: "${sftp_username}", privateKey: "${sftp_key}")
                        }
                    }
                }
            }
        }
    }
}

// task signUniversal(type: SignJar, dependsOn: 'jar') {
//     onlyIf {
//         project.hasProperty('jarsigner')
//     }
// 
//     def jarsigner = [:]
// 
//     if (project.hasProperty('jarsigner'))
//         jarsigner = project.jarsigner
// 
//     alias = 'tcon'
//     storePass = jarsigner.storepass
//     keyPass = jarsigner.keypass
//     keyStore = jarsigner.keystore
//     inputFile = jar.archivePath
//     outputFile = jar.archivePath
// }
// uploadArchives.dependsOn signUniversal
// build.dependsOn signUniversal

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
            artifact sourcesJar
        }
    }

    repositories {
        if (project.hasProperty('DEPLOY_DIR')) {
            maven { url DEPLOY_DIR }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
    options.compilerArgs.addAll(['-nowarn', '-Xlint:none', '-Xlint:-deprecation', '-Xlint:-removal', '-Xlint:-unchecked'])
    options.fork = true
    options.forkOptions.jvmArgs.add('--sun-misc-unsafe-memory-access=allow')
}
